# LaplaceTrade

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
deploy/: cryptotrader.service
scripts/: holdout.py  record_market.py  run_backtest.py  sweep.py  train.bat  train.ps1  train_model.py  walkforward.py
src/cryptotrader/: __init__.py  config.py
src/cryptotrader/api/: __init__.py  auth.py  controller.py  management.py  recorder_control.py  scheduler.py  server.py
src/cryptotrader/api/static/: dashboard.html
src/cryptotrader/backtest/: __init__.py  analytics.py  engine.py  metrics.py  portfolio.py
src/cryptotrader/core/: __init__.py  events.py  interfaces.py  types.py
src/cryptotrader/data/: __init__.py  features.py  ingestion.py  recorder.py  sources.py
src/cryptotrader/execution/: __init__.py  base.py  live.py  paper.py  simulated.py
src/cryptotrader/live/: __init__.py  engine.py  state.py
src/cryptotrader/ml/: __init__.py  experiments.py  meta.py  model.py  registry.py
src/cryptotrader/ops/: logbuffer.py  notify.py
src/cryptotrader/persistence/: __init__.py  database.py
src/cryptotrader/risk/: __init__.py  manager.py
src/cryptotrader/strategy/: __init__.py  ml_strategy.py
tests/: test_analytics.py  test_api.py  test_backtester.py  test_config.py  test_features.py  test_live_engine.py  test_live_execution.py  test_persistence.py  test_recorder.py
